fix wrapping for both cw and content (#130)

--- a/style/_layout.scss
+++ b/style/_layout.scss
@@ -48,7 +48,12 @@ main>section {
 
 .status .content {
   white-space: pre-wrap;
-  overflow-wrap: break-word;
+}
+
+.status {
+  .cw, .content {
+    overflow-wrap: break-word;
+  }
 }
 
 .view-status {
